# nbody2d

./: .gitignore  .gitmodules  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg
data/: README.md
docs/: index.html  ref.bib
docs/css/: mods.css
lit/: index.md  random-fields.md
nbody/: cft.py  gnuplot.py  nbody.py  phase_plot.py
